--- a/MRMDataManager/Web.config
+++ b/MRMDataManager/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MRMDataManager-20210511102642.mdf;Initial Catalog=aspnet-MRMDataManager-20210511102642;Integrated Security=True" providerName="System.Data.SqlClient" />
+	  <add name="MRMData" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=MRMData;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
   </connectionStrings>
   <appSettings>
   </appSettings>
